# World-Simulator

./: .gitignore  .pre-commit-config.yaml  EXAMPLES.md  README.md  basic.yaml  memory.md  pyproject.toml  run-simulator.bat  testing.txt  todo.txt  usage_instructions.md
.github/workflows/: ci.yml
kb/actions/flashlight/: flip_switch.yaml
kb/actions/generic/: check_cartesian.yaml  (+13 more)
kb/objects/: bottle.yaml  coffee_machine.yaml  compound_test.yaml  dice.yaml  dice_and_compound.yaml  dice_cartesian.yaml  dice_compound.yaml  dice_double_merge.yaml  dice_nested.yaml  dice_nested_postcond.yaml  dice_same_attr.yaml  flashlight.yaml  kettle.yaml  slot_machine.yaml  tv.yaml
kb/spaces/: common.yaml
scripts/: build_ground_truth.py  flashlight_e2e.sh  run_all_tests.sh  run_examples.sh
src/mental_models_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: create_ground_truth_dataset.py  test_battery_trend_logic.py  test_cli.py  test_cli_actions_option.py  test_cli_import.py  test_cli_paths.py  test_dataset_text_formatting.py  test_error_messages.py  test_flashlight_turn_off.py  test_ground_truth_replay.py  test_loader_validation.py  test_phase1_smoke.py  test_phase2_actions.py  test_preconditions_logic.py  test_registry_validation.py  test_tree_simulation.py
tests/tree/: __init__.py  conftest.py  test_basic.py  test_bug_fixes.py  test_models.py  test_phase2_branching.py  test_phase2_demorgan.py  test_phase2_demorgan_edge_cases.py  test_phase2_operators.py  test_phase2_value_sets.py  test_serialization.py
tests/utils/: ground_truth.py
(+135 files in other folders)
