[project]
name = "mental-models-simulator"
version = "0.2.0"
description = "Ground-truth qualitative simulator for everyday objects (benchmark-focused)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.4.0",
    "PyYAML>=6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pytest>=8.4.1",
]

[project.scripts]
sim = "simulator.cli.app:app"

[tool.ruff]
select = ["E","F","I"]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
